@@ -2,12 +2,20 @@
 
 <iati-activities>
 
-<iati-activity>
+<iati-activity default-currency="GBP">
 
+<!-- full example -->
 <planned-disbursement updated="2011-03-01">
   <period-start iso-date="2011-01-01">1 January 2011</period-start>
   <period-end iso-date="2011-01-01">31 December 2011</period-end>
   <value value-date="2011-01-01" currency="GBP">500000</value>
+</planned-disbursement>
+
+<!-- with optional attributes omitted -->
+<planned-disbursement>
+  <period-start>1 January 2011</period-start>
+  <period-end>31 December 2011</period-end>
+  <value value-date="2011-01-01">500000</value>
 </planned-disbursement>
 
 </iati-activity>
